k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exam-service
spec:
  type: ClusterIP
  selector:
    app: exam-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
